--- a/app/views/psd-revised-flow/case-status/inc_products-pgs-breadcrumbs.html
+++ b/app/views/psd-revised-flow/case-status/inc_products-pgs-breadcrumbs.html
@@ -4,7 +4,7 @@
       <a class="govuk-breadcrumbs__link" href="#">Home</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="#" aria-current="page">Products</a>
+      <a class="govuk-breadcrumbs__link" href="#">Products</a>
     </li>
   </ol>
 </nav>
