--- a/app/views/psd-revised-flow/inner-home-page/home-01.html
+++ b/app/views/psd-revised-flow/inner-home-page/home-01.html
@@ -14,7 +14,7 @@ Home
             Home <span class="govuk-!-font-weight-regular govuk-heading-l govuk-!-display-inline"> &ndash; The Product Safety Database (<abbr>PSD</abbr>)</span>
         </h1>
 
-        <p class="govuk-body govuk-!-margin-bottom-0">
+        <p class="govuk-body govuk-!-margin-bottom-0 opss-max-width">
             The Product Safety Database (<abbr>PSD</abbr>) is the <abbr>UK</abbr> statutory record of products deemed unsafe or noncompliant. It allows the <abbr>UK</abbr> government to act to protect consumers and is the primary source for market surveillance activity, recorded corrective actions and the sharing and publishing of product safety information.
         </p>
 
