--- a/app/views/psd-revised-flow/case-status/inc_cases-pgs-breadcrumbs-2.html
+++ b/app/views/psd-revised-flow/case-status/inc_cases-pgs-breadcrumbs-2.html
@@ -6,5 +6,8 @@
     <li class="govuk-breadcrumbs__list-item">
       <a class="govuk-breadcrumbs__link" href="#">Cases</a>
     </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="#">Your cases</a>
+    </li>
   </ol>
 </nav>
