updates to duplicates work

--- a/app/views/psd-revised-flow/case-status/new-cases-example_your_and_team-new.html
+++ b/app/views/psd-revised-flow/case-status/new-cases-example_your_and_team-new.html
@@ -70,6 +70,8 @@ Your cases
                             <option data-url="/cases/team-cases?sort_by=created_at&amp;sort_dir=asc">Oldest cases</option>
                             <option data-url="/cases/team-cases?sort_by=updated_at&amp;sort_dir=desc">Recent updates</option>
                             <option data-url="/cases/team-cases?sort_by=updated_at&amp;sort_dir=asc">Oldest updates</option>
+                            <option data-url="/cases/team-cases?sort_by=updated_at&amp;sort_dir=noti">Notified</option>
+                            <option data-url="/cases/team-cases?sort_by=updated_at&amp;sort_dir=draf">Draft</option>
                         </select>
                     </fieldset>
                     <dl class="govuk-list opss-float-right opss-dl-select opss-js-enabled-hidden">
@@ -85,6 +87,12 @@ Your cases
                         </dd>
                         <dd>
                             <a href="/cases/team-cases?sort_by=updated_at&amp;sort_dir=asc">Oldest updates</a>
+                        </dd>
+                        <dd>
+                            <a href="/cases/team-cases?sort_by=updated_at&amp;sort_dir=noti">Notified</a>
+                        </dd>
+                        <dd>
+                            <a href="/cases/team-cases?sort_by=updated_at&amp;sort_dir=draf">Draft</a>
                         </dd>
                     </dl>
                 </div>
@@ -138,7 +146,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-1 status-01" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk1">Serious risk case</span>
                                 <span class="govuk-visually-hidden"> | </span>
@@ -178,7 +186,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-2 status-02" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
                             </td>
                         </tr>
                     </tbody>
@@ -214,7 +222,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-3 status-03" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Enquiry</span>
+                                <span class="opss-tag opss-tag--std govuk-!-font-weight-bold">Notified</span>
                             </td>
                         </tr>
                     </tbody>
@@ -250,7 +258,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-4 status-04" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Project</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
 
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk4">This case has no product</span>
@@ -289,7 +297,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-5 status-05" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std govuk-!-font-weight-bold">Notified</span>
                             </td>
                         </tr>
                     </tbody>
@@ -325,7 +333,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-6 status-06" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Enquiry</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk2">Restricted case</span>
                             </td>
@@ -363,9 +371,8 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-7 status-07" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std opss-cross-through">Enquiry</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
                                 <span class="govuk-visually-hidden"> | </span>
-                                <span class="opss-tag opss-tag--risk3">Case closed</span>
                             </td>
                         </tr>
                     </tbody>
@@ -401,7 +408,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-8 status-08" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
                             </td>
                         </tr>
                     </tbody>
@@ -437,7 +444,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-9 status-09" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
 
                             </td>
                         </tr>
@@ -474,7 +481,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-10 status-10" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std govuk-!-font-weight-bold">Notified</span>
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk1">Serious risk case</span>
                                 <span class="govuk-visually-hidden"> | </span>
@@ -514,7 +521,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-11 status-11" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std govuk-!-font-weight-bold">Notified</span>
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
                             </td>
@@ -552,7 +559,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-12 status-12" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Enquiry</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
                             </td>
                         </tr>
                     </tbody>
@@ -588,7 +595,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-13 status-13" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Project</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
                             </td>
                         </tr>
                     </tbody>
@@ -624,7 +631,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-14 status-14" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
 
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk4">This case has no product</span>
@@ -663,7 +670,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-15 status-15" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Enquiry</span>
+                                <span class="opss-tag opss-tag--std govuk-!-font-weight-bold">Notified</span>
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk2">Restricted case</span>
                             </td>
@@ -701,9 +708,8 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-16 status-16" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std opss-cross-through">Enquiry</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
                                 <span class="govuk-visually-hidden"> | </span>
-                                <span class="opss-tag opss-tag--risk3">Case closed</span>
                             </td>
                         </tr>
                     </tbody>
@@ -739,7 +745,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-17 status-17" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
                             </td>
                         </tr>
                     </tbody>
@@ -775,7 +781,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-18 status-18" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std govuk-!-font-weight-bold">Notified</span>
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk1">Serious risk case</span>
                             </td>
@@ -813,7 +819,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-19 status-19" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
 
                             </td>
                         </tr>
@@ -850,7 +856,7 @@ Your cases
                                 Type
                             </th>
                             <td headers="item-20 status-20" colspan="4" class="govuk-table__cell">
-                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="opss-tag opss-tag--std">Draft</span>
 
                                 <span class="govuk-visually-hidden"> | </span>
                                 <span class="opss-tag opss-tag--risk4">This case has no product</span>
